--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<title>Barbearia Alura</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <title>Esfihativa</title>
 </head>
 <body>
-<h1>Sobre a Barbearia Alura</h1>>
-<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
-<p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
-<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda.
-O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+    <header>
+        <h1 class="titulo-principal">Esfihativa - Melhor esfiha de São Paulo</h1>
+    </header>
+
+    <img class="banner" src="imagens/alimentacao-300.jpg" alt="Banner">
+
+    <div class="principal">
+        <h2>Sobre a Esfihativa</h2>
+        <p>Localizada no coração da cidade a <strong>Esfihativa</strong> traz para o mercado uma inovação no ramo de fast-food com esfihas. Fundada em 2021, a Esfihativa já é destaque na cidade e conquista novos clientes a cada dia.</p>
+        <p id="missao"><em>Nossa missão é: <strong class="proporcionar">"Proporcionar agilidade e sabor, sem disperdiçar insumos"</strong>.</em></p>
+        <p>Oferecemos esfihas de sabores diferenciados, como carne, frango e queijo. O atendimento é totalmente interativo com o painel, garantindo qualidade e satisfação dos nossos clientes.</p>
+    </div>
+
+    <div class="beneficios">
+        <h2>Benefícios</h2>
+        <ul>
+            <li class="itens">Atendimento aos Clientes</li>
+            <li class="itens">Espaço diferenciado</li>
+            <li class="itens">Agilidade no pedido</li>
+            <li class="itens">Esfihas saborosas</li>
+        </ul>
+        <img class="imgbeneficios" src="imagens/esfiha.jpg" alt="Beneficios">
+    </div>
 </body>
+</html>
